<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="about_alc">ABOUT ALC</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="track_android">Track: Android</string>
    <string name="country_nigeria">Country: Nigeria</string>
    <string name="email_ogunjinmironke_gmail_com">Email: ogunjinmironke@gmail.com</string>
    <string name="phone_number_2347069357297">Phone Number: 2347069357297</string>
    <string name="slack_username_oyeronke">Slack Username: Oyeronke</string>
    <string name="ogunjinmi_oyeronke">Ogunjinmi Oyeronke</string>
    <string name="slack_username_ronke">Slack Username: Ronke</string>
</resources>
