<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Welcome_ALC"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/welcome_to_alc_4_0"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/AboutALC"
        android:layout_width="157dp"
        android:layout_height="58dp"
        android:layout_marginTop="124dp"
        android:text="@string/about_alc"
        android:background="@android:color/holo_green_dark"
        android:textSize="20sp"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="@+id/Welcome_ALC"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/Welcome_ALC"
        app:layout_constraintTop_toBottomOf="@+id/Welcome_ALC" />

    <Button
        android:id="@+id/MyProfile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/my_profile"
        android:background="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/AboutALC"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/AboutALC"
        app:layout_constraintTop_toBottomOf="@+id/AboutALC" />
</android.support.constraint.ConstraintLayout>